# Labarotaorni

./: README.md  sort.c
Laba12(Prog)/: CAR_M.c  CAR_M.h  CAR_MAIN.c
Laba14(Prog)/: CMakeLists.txt
lab9_git/: README.md  screenshots.txt  sort.c
lab9_git/lab9_git/: sort.c
laba10#/: POINT_H.c  main.c  point.h
